# PC_new

./: README.md  integral.ipynb  第一个note.ipynb
Challenge/: 凯撒密码解码.py
GUI/: bb.py  myGUI001.py  myGUI001.ui  myGUI002.py  myGUI002.ui  myGUI003.py  myGUI003.ui
_manim/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  34b9193f53b1fb0f.dvi  ThreeDVector.py  _dvi_to_svg.py  c.py  custom_config.yml  example_scenes.py  my03.py  动画.py  安装.py  帮助.py  报错.py  音频.py
_manim2/: 01.py  020.py  07.py  fourier_series.py  pi.txt.py  圆周率可视化.py  安装.py
_pygame/: 1.txt  music_play.py  网易音乐下载.py  音乐播放.py  音乐播放器 (1).py  音乐播放器.py  音乐播放器2.0.py  音乐播放器2.1.py  音乐播放器2.2.py  音乐播放器2.3.py
ctf/: shenqi.php  入门.py
da/: main.py
game/: 01.py  SGM.py  链式函数.py  链式调用.py
git/: 推送
math_/: 000.txt  001.py  002.py  003.py  004.py  005.py  3n+1 - 精确 - 限制.py  3n+1.py  9x9乘法表带颜色.py  print函数颜色简便选择.py  subset sum problem.py  三体模拟.py  三角形判断.py  二元方程.py  健康指数.py  右对齐乘法表.py  因数分解.py  因数分解2.py  城市列表.py  (+12 more)
机器人/None_QQ/course_helper/: README.md  pyproject.toml
机器人/None_QQ/course_helper/data/course_config/: config.json
机器人/None_QQ/course_helper/src/plugins/: test.py  名言.py  图片发送.py  群列表.py  音乐.py
机器人/None_QQ/course_helper/src/plugins/biliav/: __init__.py  data_source.py
机器人/None_QQ/course_helper/src/plugins/bilibili_viode/: main.py  utils.py
机器人/None_QQ/test/: .env.dev  bot.py  pyproject.toml
机器人/None_QQ/test/data/: data.sqlite3
机器人/None_QQ/test/data/course_config/: config.json
机器人/None_QQ/test/data/petpet/: meme_list.yml
机器人/None_QQ/test/none_qq/plugins/: _名言1.py  名言1.py  音乐.py
(+1709 files in other folders)
